objects/redwing__Training_Activity_Category__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Learning_Category__c</fullName>
        <label>Catalog</label>
        <referenceTo>redwing__Learning_Category__c</referenceTo>
        <relationshipLabel>Catalog Learning Activities</relationshipLabel>
        <relationshipName>Training_Activity_Categories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Activity__c</fullName>
        <label>Learning Activity</label>
        <referenceTo>redwing__Training_Activity__c</referenceTo>
        <relationshipLabel>Learning Activity Catalogs</relationshipLabel>
        <relationshipName>Training_Activity_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Learning Activity Catalog</label>
    <nameField>
        <displayFormat>LAC-{0000000}</displayFormat>
        <label>Learning Activity Catalog ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Activity Catalogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>